--- a/solution/solution.html
+++ b/solution/solution.html
@@ -15,7 +15,7 @@
   <div class="poster">
     <img class="motivation-img" src="./assets/images/daenerys.jpeg" src="daenerys with egg" />
     <h1>That Special Moment</h1>
-    <h2>HANA ADURREE</h2>
+    <h2>HANNAH</h2>
     <p>When you find the perfect avocado at the supermarket</p>
   </div>
 </body>
