modified the first commist

--- a/solution/solution.html
+++ b/solution/solution.html
@@ -16,7 +16,8 @@
     <img class="motivation-img" src="./assets/images/daenerys.jpeg" src="daenerys with egg" />
     <h1>That Special Moment</h1>
     <h2>HANNAH's</h2>
-    <p>When you find the perfect avocado at the supermarket</p>
+    <h3>Yes I am</h3>
+    <p>When you find the perfect moment</p>
   </div>
 </body>
 
